#cargo-features = ["strip"]

[package]
name = "etherhosts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#strip = true  # Automatically strip symbols from the binary.
lto = true

[dependencies]
chrono = "0.4"
regex = "1.5"
